--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-font-family:'Times New Roman', Times, serif;
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 background:lightblue;
 color: rgb(0, 0, 0);
 }
