--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,7 @@
 <footer>
-    <section>
-        <h1>Built with Node.js</h1> 
+    <h1 class="text-2xl font-semibold text-black-700" >
+        <section>
+        Built with Node.js
     </section>
+    </h1>
 </footer>
