--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,10 @@
 body {
-font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-background:lightblue;
-color: rgb(0, 0, 0);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background: white;
+  padding: 4%;
+  font-size: large;
 }
 
-.Todo-Item:hover .trash-icon{
-  display:block;
+.Todo-Item:hover .trash-icon {
+  display: block;
 }
