--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<body>
-<h1 class="text-3xl font-semibold text-black-900">My Todo-list</h1>
+<html>
+    <body>
+<h1 class="text-2xl font-semibold text-black-700" >
+    This is my Todo Application
+</h1>
 </body>
 </html>
